<resources>
    <string name="app_name">NHS Buddy App</string>
    <string name="logo_name">Buddy App</string>
    <string name="login_label">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Password</string>
    <string name="username_label">Username</string>
    <string name="register_label">Register</string>


</resources>
